k8s_old/tool/grafana/grafana-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-np
spec:
  type: NodePort
  ports:
   - name: "http-port"
     protocol: "TCP"
     port: 80
     targetPort: 3000
  selector:
    app: grafana
