k8s_old/tool/grafana/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
spec:
  rules:
  - host: grafana.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana-np
            port: 
              number: 80
  tls:
  - hosts:
    - sbdemo.example.com
    secretName: tls-sbdemo
